# jackpot_rust

./: .env  Cargo.toml  diesel.toml  index.html
migrations/2024-07-28-170225_create_users_table/: up.sql
migrations/2024-08-01-100644_create_jackpot_tables/: up.sql
src/: db_utils.rs  jwt.rs  main.rs  schema.rs  validation.rs
src/actors/auth/: mod.rs
src/errors/auth/: mod.rs
src/handlers/auth/: handle_login.rs  handle_register.rs  mod.rs
src/handlers/websocket/: mod.rs
src/handlers/websocket/chat/: chat_server.rs  chat_ws.rs  mod.rs
src/handlers/websocket/coinflip/: coinflip_server.rs  coinflip_ws.rs  mod.rs
src/handlers/websocket/crash/: crash_server.rs  crash_ws.rs  mod.rs
src/handlers/websocket/jackpot/: jackpot_server.rs  jackpot_ws.rs  mod.rs
src/messages/auth/: mod.rs
src/middlewares/: mod.rs  only_authorized.rs
src/models/user/: mod.rs
src/routes/: mod.rs
src/routes/auth/: mod.rs
src/routes/websockets/: mod.rs
