[package]
name = "jackpot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.2", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.30"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
thiserror = "1.0.63"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
